Consolidate README.md file - Update maven-surefire-plugin config - Update naming convention in the runner classes - Add note for the test data - Update pom.xml file - Clean up the code