@@ -68,6 +68,12 @@
             <version>${microsoft.playwright.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version> <!-- Use the latest version -->
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>tech.grasshopper</groupId>
             <artifactId>extentreports-cucumber7-adapter</artifactId>
             <version>${extentreports-cucumber7-adapter.version}</version>
@@ -87,6 +93,10 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <compilerArgs>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -95,9 +105,7 @@
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
                         <includes>
-                            <include>**/*TestAllRunner.java</include>
-                            <include>**/*TestApiRunner.java</include>
-                            <include>**/*TestUiRunner.java</include>
+                            <include>**/*TestsRunner.java</include>
                         </includes>
                     <useSystemClassLoader>true</useSystemClassLoader>
                     <reportsDirectory>${project.build.directory}/test-reports/surefire-reports</reportsDirectory>
@@ -115,7 +123,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>cucumber-framework</projectName>
+                            <projectName>threat-fabric-assignment</projectName>
                             <outputDirectory>${project.build.directory}</outputDirectory>
                             <inputDirectory>${project.build.directory}</inputDirectory>
                             <jsonFiles>
